fixed problem with bottom scroll bar, added menu text to hamburger. Fixed logo spacing on mobile

--- a/app/_scss/_container.scss
+++ b/app/_scss/_container.scss
@@ -1,4 +1,5 @@
 .container{
   max-width: $container-max-width;
   margin: 0 auto;
+  overflow-x: hidden;
 }
