--- a/app/_scss/_footer.scss
+++ b/app/_scss/_footer.scss
@@ -1,7 +1,7 @@
 .footer-bottom {
     position: relative;
-    background: #333;
-    color: #fff;
+    background: #fff;
+    color: #333;
     height: 6.5em;
 }
 
@@ -10,7 +10,7 @@
     position: absolute;
     padding: 0;
     margin: 0;
-    color: #ddd;
+    color: #333;
     bottom: 0.25em;
 
 }
